Update SecretFinder.java
small tweaks